# dirt-client

./: .gitignore  .gitmodules  AUTHORS  Alias.cc  BUGS  Buffer.cc  ChangeLog  Chat.cc  Config.cc  Curses.cc  EmbeddedInterpreter.cc  GlobalStats.cc  Hook.cc  Hotkey.cc  InputBox.cc  InputLine.cc  Interpreter.cc  MUD.cc  Makefile.am  Makefile.in  MessageWindow.cc  NEWS  Notes  Option.cc  OutputWindow.cc  PerlProgramming  Pipe.cc  README.1ST  README.md  Screen.cc  Selectable.cc  Selection.cc  Session.cc  Shell.cc  Socket.cc  StaticBuffer.cc  StatusLine.cc  String.cc  TODO  TTY.cc  (+16 more)
admin/: Makefile  Makefile.in
doc/: CommandLine  Escaping  Help  Hooks  Keys  Scripts  Trigger
doc/commands/: alias  bell  clear  close  command  complete  disable  echo  enable  eval  exec  gag  group  hook  keypress  load  open  prompt  quit  reopen  run  save  send  setinput  status  trig  trigger  window  windows
doc/old/: Changes  README  README.html  TODO
h/: Action.h  Alias.h  Chat.h  Color.h  Config.h  Control.h  Curses.h  EmbeddedInterpreter.h  Hook.h  Hotkey.h  InputBox.h  InputLine.h  Interpreter.h  Label.h  List.h  MUD.h  MessageBox.h  MessageWindow.h  NullEmbeddedInterpreter.h  Option.h  OutputWindow.h  PerlEmbeddedInterpreter.h  Pipe.h  Plugin.h  ProxyWindow.h  PythonEmbeddedInterpreter.h  Screen.h  ScrollbackSearch.h  Selectable.h  Selection.h  Session.h  Shell.h  Socket.h  StaticBuffer.h  StatusLine.h  String.h  TTY.h  Variables.h  Window.h  WindowGroup.h  (+5 more)
m4/: dirt_version.m4  emc_path_prog.m4
plugins/: PerlEmbeddedInterpreter.cc  PythonEmbeddedInterpreter.cc
samples/3k/: Player.pl  Saved.pl  ThreeKingdoms.pl  dirtrc
samples/auto/: README  completion.pl  gag.pl  help.pl  repeat.pl  trigger.pl
samples/contrib/: ThreeKingdoms.pl  log.pl  spellcheck.pl
samples/sys/: config.py  functions.pl  functions.py  idle.pl  init.pl
scripts/3k/: ThreeKingdoms.pl  aliases.pl  history
scripts/auto/: alias.pl  command.pl  completion.pl  gag.pl  help.pl  highlight.pl  keypress.pl  mudftp.pl  trigger.pl
scripts/contrib/: bot.pl  bot.py  ccancel.pl  mudcompletion.pl  prompt.pl  reconnect.pl  repeat.pl  vars.pl
scripts/sys/: color.pl  config.pl  functions.pl  init.pl  init.py
src/: Buffer.cc  Chat.cc  Config.cc  Curses.cc  EmbeddedInterpreter.cc  Hook.cc  InputLine.cc  Interpreter.cc  MUD.cc  Makefile.am  Makefile.in  MessageWindow.cc  Option.cc  OutputWindow.cc  Pipe.cc  Screen.cc  SearchPath.cc  Selectable.cc  Selection.cc  Session.cc  Shell.cc  Socket.cc  StaticBuffer.cc  StatusLine.cc  TTY.cc  Window.cc  main.cc  misc.cc
src/h/: Bitvalues.h  Buffer.h  Chat.h  Color.h  EmbeddedInterpreter.h  GlobalStats.h  Hook.h  Interpreter.h  Label.h  List.h  MessageWindow.h  NullEmbeddedInterpreter.h  Numbered.h  OutputWindow.h  PerlEmbeddedInterpreter.h  Plugin.h  ProxyWindow.h  PythonEmbeddedInterpreter.h  Screen.h  SearchPath.h  Selectable.h  Shell.h  Socket.h  String.h  TTY.h  WindowGroup.h  config.h.in  defs.h  defs.h.in  misc.h
src/plugins/: PerlEmbeddedInterpreter.cc  PythonEmbeddedInterpreter.cc
tests/: Makefile  OptionTester.cc  README  strcmp.cc  stringbug.cc
